--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+// 添加插件
+//apply plugin: 'com.mob.sdk'
 
 android {
     compileSdkVersion 27
@@ -16,10 +18,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '28.0.2'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+//    MobSDK短信验证
+    // 在MobSDK的扩展中注册SMSSDK的相关信息
+//    MobSDK {
+//        appKey "2801a993308b0"
+//        appSecret "e023d1433f4a7d56e7afc40eff23297c"
+//        SMSSDK {}
+//    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
